--- a/package.json
+++ b/package.json
@@ -5,26 +5,39 @@
     "main": "app.js",
     "type": "module",
     "scripts": {
-        "dev": "vite"
+        "dev": "vite",
+        "start": "nodemon src/app.js"
     },
     "keywords": [],
     "author": "",
     "license": "ISC",
     "dependencies": {
+        "axios": "^1.5.1",
         "bcryptjs": "^2.4.3",
         "body-parser": "^1.20.2",
         "concurrently": "^7.6.0",
+        "connect-flash": "^0.1.1",
+        "connect-mongodb-session": "^3.1.1",
+        "cookie-parser": "^1.4.6",
         "cors": "^2.8.5",
         "crypto-js": "^4.1.1",
         "dotenv": "^16.0.3",
+        "ejs": "^3.1.9",
         "express": "^4.18.2",
+        "express-session": "^1.17.3",
         "joi": "^17.9.1",
         "jsonwebtoken": "^9.0.0",
         "mongoose": "^7.0.3",
         "mongoose-paginate-v2": "^1.7.1",
+        "node-localstorage": "^3.0.5",
+        "passport": "0.5.2",
+        "passport-local": "1.0.0",
         "path": "^0.12.7",
         "url": "^0.11.3",
         "vite": "^4.1.4",
         "vite-plugin-node": "^3.0.2"
+    },
+    "devDependencies": {
+        "nodemon": "^3.0.1"
     }
 }
